// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`borderInlineStartWidth renders 0 1`] = `
Array [
  .c0 {
  border-inline-start-width: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-start-width: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-start-width: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-start-width: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`borderInlineStartWidth renders function 1`] = `
Array [
  .c0 {
  border-inline-start-width: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-start-width: has;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-start-width: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-start-width: has;
}

<div
    className="c0"
  />,
]
`;

exports[`borderInlineStartWidth renders invalid theme path 1`] = `
Array [
  .c0 {
  border-inline-start-width: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-start-width: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-start-width: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-start-width: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`borderInlineStartWidth renders negative number 1`] = `
Array [
  .c0 {
  border-inline-start-width: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-start-width: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-start-width: -42365px;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-start-width: -42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`borderInlineStartWidth renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    border-inline-start-width: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline-start-width: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline-start-width: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-inline-start-width: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    border-inline-start-width: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline-start-width: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline-start-width: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-inline-start-width: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-inline-start-width: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline-start-width: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline-start-width: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-inline-start-width: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-inline-start-width: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline-start-width: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline-start-width: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-inline-start-width: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderInlineStartWidth renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    border-inline-start-width: July;
  }
}

@media April {
  .c0 {
    border-inline-start-width: August;
  }
}

@media January {
  .c0 {
    border-inline-start-width: September;
  }
}

@media April {
  .c0 {
    border-inline-start-width: November;
  }
}

@media June {
  .c0 {
    border-inline-start-width: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    border-inline-start-width: July;
  }
}

@media April {
  .c0 {
    border-inline-start-width: August;
  }
}

@media January {
  .c0 {
    border-inline-start-width: September;
  }
}

@media April {
  .c0 {
    border-inline-start-width: November;
  }
}

@media June {
  .c0 {
    border-inline-start-width: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-inline-start-width: January;
  }
}

@media April {
  .c0 {
    border-inline-start-width: December;
  }
}

@media January {
  .c0 {
    border-inline-start-width: April;
  }
}

@media April {
  .c0 {
    border-inline-start-width: May;
  }
}

@media June {
  .c0 {
    border-inline-start-width: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-inline-start-width: January;
  }
}

@media April {
  .c0 {
    border-inline-start-width: December;
  }
}

@media January {
  .c0 {
    border-inline-start-width: April;
  }
}

@media April {
  .c0 {
    border-inline-start-width: May;
  }
}

@media June {
  .c0 {
    border-inline-start-width: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderInlineStartWidth renders postitive number 1`] = `
Array [
  .c0 {
  border-inline-start-width: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-start-width: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-start-width: 42365px;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-start-width: 42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`borderInlineStartWidth renders string 1`] = `
Array [
  .c0 {
  border-inline-start-width: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-start-width: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-start-width: June;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-start-width: June;
}

<div
    className="c0"
  />,
]
`;

exports[`borderInlineStartWidth renders valid theme path 1`] = `
Array [
  .c0 {
  border-inline-start-width: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-start-width: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-start-width: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-start-width: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
